Manifest/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30001  # Port exposé sur les nœuds (entre 30000 et 32767)
